agregando operador nullish

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div id="divPaquetes" class="row"></div>
     <div id="divBuscar" class="row" ></div>
   </div>
-
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.24/dist/sweetalert2.all.min.js"></script>
  <script src="tarjeta.js"></script>
   <script src="script.js"></script>
 </body>
